leiðbeningar á skjali bætt i

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,3 +1,11 @@
+/**----------------------------------------------------------------------------------
+Til að byrja með við ætlum að reyna að hafa allar breytur i þessu skjali 
+E.I stærð skjárs,stærð texta, útlit texta , margin. Ástæðan fyrir þetta er að það getur 
+komið oft fyrir að margir aðilar  að vinna i mismunandi pörtum á siðu (lika aðrar siður) 
+þá gera þeir sinar eigin stærið en svo er hægt að lenda i þetta mun ekki lita eins á 
+öllum siðum E.I 3 mismunandi margin reglur, texta stærðir .... 
+Notar breytur úr þessu skjali og ef það er ekki til þá bæta hana við i þetta skjal
+-----------------------------------------------------------------------------------**/
 //Grunnstærðir fyir öll tækin sem mun vera stuðið
 $desktop-max-width: 1200px;
 $tablet-max-width: 600px;
