--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -15,3 +15,5 @@ $base-font-size:16px;
 //fylgja allar aðrar leturgerðir eftirfarandi skala: 12 14 16 18 21 24 36 48 60 72
 //Open Sans er letur meginmál, Roboto Slab er notað fyrir fyrirsagnir
 //bæta margins sem má nota 
+$font-color-nav:#FFFFFF;
+$h1_font_size:1.5em;
