--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,52 @@
 @charset "UTF-8";
+/**----------------------------------------------------------------------------------
+Til að byrja með við ætlum að reyna að hafa allar breytur i þessu skjali 
+E.I stærð skjárs,stærð texta, útlit texta , margin. Ástæðan fyrir þetta er að það getur 
+komið oft fyrir að margir aðilar  að vinna i mismunandi pörtum á siðu (lika aðrar siður) 
+þá gera þeir sinar eigin stærið en svo er hægt að lenda i þetta mun ekki lita eins á 
+öllum siðum E.I 3 mismunandi margin reglur, texta stærðir .... 
+Notar breytur úr þessu skjali og ef það er ekki til þá bæta hana við i þetta skjal
+-----------------------------------------------------------------------------------**/
 /*Þetta skjal bara i raun inniheldur allar grunnstillingar á öllum siðum*/
-
 /*Tryggjum að öll tög eru með Border-box  og fjarlægjum margin og padding*/
 *, *:before, *:after {
   box-sizing: inherit;
   padding: 0;
-  margin: 0; 
-}  
-  
+  margin: 0; }
+
 /*setjum border-box á allt ásamt grunn letur stærð og linubil*/
 html {
   box-sizing: border-box;
-  font-size:16px;
-  line-height: 1.5;
-}
+  font-size: 16px;
+  line-height: 1.5; }
 
 /*tryggjum að i havaða skjáar stærð sem er öll gögin okkar eru alltaf eru á grindi annars ekki byrt*/
-body {
-  max-width: 1200px;
-  margin: 0 auto;
-  overflow-x: hidden;
-}
+@media (min-width: 1200px) {
+  body {
+    max-width: 1200px;
+    margin: 0 auto;
+    overflow-x: hidden; } }
 
 /*Allar myndir munu alltaf filla út foreldran sinn þannig wrapper um myndina ákveður stærð mynds*/
 img {
-  width: 100%; 
-}
+  width: 100%; }
+
+/**----------------------------------------------------------------------------------
+Til að byrja með við ætlum að reyna að hafa allar breytur i þessu skjali 
+E.I stærð skjárs,stærð texta, útlit texta , margin. Ástæðan fyrir þetta er að það getur 
+komið oft fyrir að margir aðilar  að vinna i mismunandi pörtum á siðu (lika aðrar siður) 
+þá gera þeir sinar eigin stærið en svo er hægt að lenda i þetta mun ekki lita eins á 
+öllum siðum E.I 3 mismunandi margin reglur, texta stærðir .... 
+Notar breytur úr þessu skjali og ef það er ekki til þá bæta hana við i þetta skjal
+-----------------------------------------------------------------------------------**/
+.navigation {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #FFFFFF;
+  display: flex;
+  justify-content: space-between; }
+  .navigation__title {
+    padding: 5px;
+    font-size: 1.5em; }
+  .navigation__buttons {
+    padding: 5px; }
