--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,19 +1,25 @@
-/**----------------------------------------------------------------------------------
-Til að byrja með við ætlum að reyna að hafa allar breytur i þessu skjali 
-E.I stærð skjárs,stærð texta, útlit texta , margin. Ástæðan fyrir þetta er að það getur 
-komið oft fyrir að margir aðilar  að vinna i mismunandi pörtum á siðu (lika aðrar siður) 
-þá gera þeir sinar eigin stærið en svo er hægt að lenda i þetta mun ekki lita eins á 
-öllum siðum E.I 3 mismunandi margin reglur, texta stærðir .... 
-Notar breytur úr þessu skjali og ef það er ekki til þá bæta hana við i þetta skjal
------------------------------------------------------------------------------------**/
-//Grunnstærðir fyir öll tækin sem mun vera stuðið
-$desktop-max-width: 1200px;
-$tablet-max-width: 600px;
-$phone-max-width: 400px;
-//Grunnstærð fyrir texta stærð
-$base-font-size:16px;
-//fylgja allar aðrar leturgerðir eftirfarandi skala: 12 14 16 18 21 24 36 48 60 72
-//Open Sans er letur meginmál, Roboto Slab er notað fyrir fyrirsagnir
-//bæta margins sem má nota 
-$font-color-nav:#FFFFFF;
-$h1_font_size:1.5em;
+.button{
+	width:6.250em;
+	cursor:pointer;
+	padding:0.625em 0.3125em 0.625em 0.3125em;
+	Color:white;
+	border:1px solid rbg(102,102,102);
+	background-color:rbg(102,102,102);
+	text-decoration:none;
+}
+/*
+
+
+border-radius: 0.25em;
+color:#eee;
+
+white-space: nowrap; 
+text-overflow: ellipsis;
+overflow: hidden;
+font-family: Lato, helvetica,arial,sans-serif;
+font-size:1em;
+
+
+text-align:center;
+	
+*/
