--- a/scss/headder.scss
+++ b/scss/headder.scss
@@ -1,7 +1,7 @@
 .headder {
-  //width:100%;
-  //height:60em;
-  //margin-top:-30px;
-  //background: transparent url(../img/bg.jpg) no-repeat fixed 50% 50%;
-  //background-size: cover;
+  width:100%;
+  height:60em;
+  
+  background: transparent url(../img/bg.jpg) no-repeat fixed 50% 50%;
+  background-size: cover;
 }
