--- a/styles.scss
+++ b/styles.scss
@@ -24,7 +24,12 @@ html {
     overflow-x: hidden;
   }
 }
-
+@media (max-width: 400px) {
+	.hidden{display:none;}
+}
+@media (max-width: 600px) {
+	.hidden{display:none;}
+}
 /*Allar myndir munu alltaf filla út foreldran sinn þannig wrapper um myndina ákveður stærð mynds*/
 img {
   width: 100%; 
