--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,25 +1,30 @@
-.button{
-	width:6.250em;
-	cursor:pointer;
-	padding:0.625em 0.3125em 0.625em 0.3125em;
-	Color:white;
-	border:1px solid rbg(102,102,102);
-	background-color:rbg(102,102,102);
-	text-decoration:none;
+.button {
+  width: 6em;
+  padding: 0.3125em;
+  border: 1px solid #666;
+  border-radius: 0.25em;
+  color: #eee;
+  background-color: #666;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  cursor: pointer;
+  
+  text-decoration: none;
+  text-align: center;
+  font-family: Lato, helvetica,arial,sans-serif;//BREYTA
+  font-size:1.96em;
+
+  &:hover{
+    background-color:#333;
+    transition: background-color 500ms ease;
+  }
+  &__extra_for_nav{
+    width:4em;
+	font-size:1em;
+  }
+  &__um{
+    background-color: #333;
+	border: 1px solid #333;
+  }
 }
-/*
-
-
-border-radius: 0.25em;
-color:#eee;
-
-white-space: nowrap; 
-text-overflow: ellipsis;
-overflow: hidden;
-font-family: Lato, helvetica,arial,sans-serif;
-font-size:1em;
-
-
-text-align:center;
-	
-*/
