--- a/styles.css
+++ b/styles.css
@@ -27,35 +27,43 @@ html {
     margin: 0 auto;
     overflow-x: hidden; } }
 
+@media (max-width: 400px) {
+  .hidden {
+    display: none; } }
+
+@media (max-width: 600px) {
+  .hidden {
+    display: none; } }
+
 /*Allar myndir munu alltaf filla út foreldran sinn þannig wrapper um myndina ákveður stærð mynds*/
 img {
   width: 100%; }
 
 .button {
-  width: 6.250em;
+  width: 6em;
+  padding: 0.3125em;
+  border: 1px solid #666;
+  border-radius: 0.25em;
+  color: #eee;
+  background-color: #666;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
   cursor: pointer;
-  padding: 0.625em 0.3125em 0.625em 0.3125em;
-  Color: white;
-  border: 1px solid rbg(102, 102, 102);
-  background-color: rbg(102, 102, 102);
-  text-decoration: none; }
+  text-decoration: none;
+  text-align: center;
+  font-family: Lato, helvetica,arial,sans-serif;
+  font-size: 1.96em; }
+  .button:hover {
+    background-color: #333;
+    transition: background-color 500ms ease; }
+  .button__extra_for_nav {
+    width: 4em;
+    font-size: 1em; }
+  .button__um {
+    background-color: #333;
+    border: 1px solid #333; }
 
-/*
-
-
-border-radius: 0.25em;
-color:#eee;
-
-white-space: nowrap; 
-text-overflow: ellipsis;
-overflow: hidden;
-font-family: Lato, helvetica,arial,sans-serif;
-font-size:1em;
-
-
-text-align:center;
-	
-*/
 .headder {
   width: 100%;
   height: 60em;
@@ -64,10 +72,12 @@ text-align:center;
 
 .navigation {
   width: 100%;
-  background-color: black;
-  border: 1px solid black;
-  filter: alpha(opacity=60);
-  /* For IE8 and earlier */
+  margin-bottom: -50px;
+  background-color: #333;
+  border: 1px solid #333;
+  opacity: 0.9;
+  position: sticky;
+  top: 0;
   color: #FFFFFF;
   display: flex;
   justify-content: space-between; }
@@ -75,5 +85,5 @@ text-align:center;
     padding: 5px;
     font-size: 1.5em; }
   .navigation__buttons {
-    margin-right: 1.250em;
-    padding: 5px; }
+    margin-right: 0.250em;
+    padding: 6px; }
