--- a/styles.scss
+++ b/styles.scss
@@ -14,6 +14,7 @@ html {
   box-sizing: border-box;
   font-size:16px;
   line-height: 1.5;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /*tryggjum að i havaða skjáar stærð sem er öll gögin okkar eru alltaf eru á grindi annars ekki byrt*/
