--- a/scss/button.scss
+++ b/scss/button.scss
@@ -9,10 +9,9 @@
   text-overflow: ellipsis;
   overflow: hidden;
   cursor: pointer;
-  
+   font-family: 'Open Sans', sans-serif;
   text-decoration: none;
   text-align: center;
-  font-family: Lato, helvetica,arial,sans-serif;//BREYTA
   font-size:1.96em;
 
   &:hover{
