--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -17,3 +17,5 @@ $base-font-size:16px;
 //bæta margins sem má nota 
 $font-color-nav:#FFFFFF;
 $h1_font_size:1.5em;
+$h3_font_size:2.250em;
+$margin_for_one_hundred: 9.375em;
