Byrjað á content í about html

--- a/styles.scss
+++ b/styles.scss
@@ -6,9 +6,9 @@
 *, *:before, *:after {
   box-sizing: inherit;
   padding: 0;
-  margin: 0; 
-}  
-  
+  margin: 0;
+}
+
 /*setjum border-box á allt ásamt grunn letur stærð og linubil*/
 html {
   box-sizing: border-box;
@@ -30,7 +30,7 @@ html {
 }
 /*Allar myndir munu alltaf filla út foreldran sinn þannig wrapper um myndina ákveður stærð mynds*/
 img {
-  width: 100%; 
+  width: 100%;
 }
 
 @import "scss/button";
@@ -39,3 +39,4 @@ img {
 @import "scss/footer";
 @import "scss/navigation";
 @import "scss/tablet";
+@import "scss/aboutContent";
