--- a/grid.css
+++ b/grid.css
@@ -32,8 +32,8 @@ html {
 html.grid::before {
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 1em;
+  margin-left: 1em;
   width: calc(100% - (2 * var(--offset)));
   max-width: var(--max_width);
   min-height: 100vh;
