--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -18,4 +18,5 @@ $base-font-size:16px;
 $font-color-nav:#FFFFFF;
 $h1_font_size:1.5em;
 $h3_font_size:2.250em;
+$h4_font_size:3.125em;
 $margin_for_one_hundred: 9.375em;
