--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,33 @@ html {
 img {
   width: 100%; }
 
+@media (min-width: 600px) {
+  .page__grid {
+    background-color: blue;
+    width: 100%; }
+  .page__grid__row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 3em; }
+  .page__grid__row__col-12 {
+    width: 100%; }
+  .page__grid__row__col-8 {
+    width: 66.2%; }
+  .page__grid__row__col-4 {
+    width: 32.3%; } }
+
+.test {
+  background-color: black;
+  overflow: hidden; }
+
+.test2 {
+  margin-left: 1.250em;
+  background-color: green;
+  overflow: hidden; }
+
+.test3 {
+  margin-left: 1em; }
+
 .button {
   width: 6em;
   padding: 0.3125em;
@@ -63,17 +90,35 @@ img {
 
 .headder {
   width: 100%;
-  margin-bottom: margin_for_one_hundred; }
+  margin-bottom: 9.375em; }
   .headder__content {
     width: 100%;
-    height: 500px;
-    background: transparent url(../img/bg-subpage.jpg) no-repeat;
+    height: 31.250em;
+    background: transparent url(img/bg-subpage.jpg) no-repeat;
     background-size: cover; }
     .headder__content__title {
       color: #FFFFFF;
       font-size: 2.25em;
       padding-top: 7em;
       padding-left: 1em; }
+  .headder__extra_index {
+    width: 100%;
+    height: 100vh;
+    background: transparent url(img/bg.jpg) no-repeat;
+    background-size: cover;
+    display: flex; }
+    .headder__extra_index__content {
+      margin: auto; }
+      .headder__extra_index__content__display_1 {
+        font-size: 1.5em;
+        text-align: center; }
+      .headder__extra_index__content__display_2 {
+        font-family: 'Roboto Slab', serif;
+        font-size: 3.125em;
+        margin-bottom: 1em; }
+      .headder__extra_index__content__display_3 {
+        width: 4em;
+        margin-left: 3em; }
 
 .navigation {
   width: 100%;
@@ -93,3 +138,6 @@ img {
   .navigation__buttons {
     margin-right: 0.250em;
     padding: 6px; }
+
+.prufa {
+  color: green; }
