--- a/styles.scss
+++ b/styles.scss
@@ -37,4 +37,5 @@ img {
 @import "scss/button";
 @import "scss/headder";
 @import "scss/navigation";
-@import "scss/animations.scss";
+@import "scss/animations";
+@import "scss/footer";
