Nav og headder fyrir index/about/kaup 100% TILBUIÐ

--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -1,6 +1,7 @@
 .navigation {
   width: 100%;
   margin-bottom:-50px;
+  z-index: 1;
   //Transparent background START
   background-color: #333;//gera transparrent
   border: 1px solid #333;
