--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,7 @@ img {
 .navigation {
   width: 100%;
   margin-bottom: -50px;
+  z-index: 1;
   background-color: #333;
   border: 1px solid #333;
   opacity: 0.9;
