--- a/scss/Grid.scss
+++ b/scss/Grid.scss
@@ -1,8 +1,7 @@
 @media (min-width: $tablet-max-width) {
   .page__grid {
-     background-color:blue;
 	width: 100%;
-	margin-bottom:50px;
+	background-color:green;
 	}
 	
    .page__grid__row {
