--- a/styles.css
+++ b/styles.css
@@ -36,11 +36,15 @@ html {
 img {
   width: 100%; }
 
+.main_content {
+  width: 100%;
+  margin-top: 9.375em;
+  margin-bottom: 5em; }
+
 @media (min-width: 600px) {
   .page__grid {
-    background-color: blue;
     width: 100%;
-    margin-bottom: 50px; }
+    background-color: green; }
   .page__grid__row {
     display: flex;
     flex-wrap: wrap;
@@ -90,8 +94,7 @@ img {
     border: 1px solid #333; }
 
 .headder {
-  width: 100%;
-  margin-bottom: 9.375em; }
+  width: 100%; }
   .headder__content {
     width: 100%;
     height: 31.250em;
@@ -199,3 +202,35 @@ img {
     .footer__copywrite__content {
       text-align: center;
       color: #7a8186; }
+
+.about {
+  margin-left: 1em;
+  margin-right: 1em; }
+  .about__title {
+    margin-top: 5em; }
+  .about__about_wrapper {
+    display: flex; }
+  .about__text {
+    margin-top: 1em; }
+  .about__quote {
+    margin-top: 3em;
+    margin-bottom: 3em;
+    margin-left: 1em;
+    margin-right: 1em; }
+    @media (min-width: 400px) and (max-width: 600px) {
+      .about__quote {
+        float: right;
+        margin-right: 0em;
+        margin-left: 4em;
+        width: 50%; } }
+    .about__quote p.about__quoteText {
+      font-size: 1.3em; }
+    .about__quote footer {
+      margin-top: 2em;
+      font-size: 0.7em; }
+
+.form_content {
+  width: 100%;
+  display: flex; }
+  .form_content fieldset {
+    border: 0 none; }
