--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,6 @@ img {
       font-size: 0.7em; }
 
 .form_content {
-  width: 100%;
-  display: flex; }
+  width: 100%; }
   .form_content fieldset {
     border: 0 none; }
