--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -1,7 +1,10 @@
 .navigation {
-  width: 100%;
+  width: 102%;
+  margin-left:-10px;
   margin-bottom:-50px;
+  
   z-index: 1;
+
   //Transparent background START
   background-color: #333;//gera transparrent
   border: 1px solid #333;
@@ -18,13 +21,13 @@
   justify-content: space-between;
   
   &__title {
-	padding:5px;
+	padding:10px;
 	font-size:$h1_font_size;
 	font-family: 'Roboto Slab', serif;
   }
  
   &__buttons {
     margin-right:0.250em;
-    padding:6px; 
+    padding:9px; 
   }
 }
