--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,8 @@ img {
     border: 1px solid #333; }
 
 .headder {
-  width: 100%; }
+  width: 102%;
+  margin-left: -10px; }
   .headder__content {
     width: 100%;
     height: 31.250em;
@@ -104,7 +105,7 @@ img {
       color: #FFFFFF;
       font-size: 2.25em;
       padding-top: 7em;
-      padding-left: 1em; }
+      padding-left: 0.3em; }
   .headder__extra_index {
     width: 100%;
     height: 100vh;
@@ -125,7 +126,8 @@ img {
         margin-left: 3em; }
 
 .navigation {
-  width: 100%;
+  width: 102%;
+  margin-left: -10px;
   margin-bottom: -50px;
   z-index: 1;
   background-color: #333;
@@ -137,12 +139,12 @@ img {
   display: flex;
   justify-content: space-between; }
   .navigation__title {
-    padding: 5px;
+    padding: 10px;
     font-size: 1.5em;
     font-family: 'Roboto Slab', serif; }
   .navigation__buttons {
     margin-right: 0.250em;
-    padding: 6px; }
+    padding: 9px; }
 
 @-webkit-keyframes fadeIn {
   from {
@@ -187,7 +189,8 @@ img {
     animation-delay: 2.3s; }
 
 .footer {
-  width: 100%;
+  width: 102%;
+  margin-left: -10px;
   background-color: #333;
   color: #FFFFFF; }
   .footer__info {
@@ -203,33 +206,50 @@ img {
       text-align: center;
       color: #7a8186; }
 
-.about {
-  margin-left: 1em;
-  margin-right: 1em; }
-  .about__title {
-    margin-top: 5em; }
-  .about__about_wrapper {
-    display: flex; }
-  .about__text {
-    margin-top: 1em; }
-  .about__quote {
-    margin-top: 3em;
-    margin-bottom: 3em;
-    margin-left: 1em;
-    margin-right: 1em; }
-    @media (min-width: 400px) and (max-width: 600px) {
-      .about__quote {
-        float: right;
-        margin-right: 0em;
-        margin-left: 4em;
-        width: 50%; } }
-    .about__quote p.about__quoteText {
-      font-size: 1.3em; }
-    .about__quote footer {
-      margin-top: 2em;
-      font-size: 0.7em; }
+.about__title {
+  margin-top: 5em;
+  font-family: 'Roboto Slab', sans-serif;
+  font-weight: 700;
+  font-size: 1.5em; }
+
+.about__about_wrapper {
+  display: flex; }
+
+.about__text {
+  margin-top: 1em; }
+
+.about__quote {
+  font-size: 1.3em;
+  font-style: italic;
+  margin-top: 3em;
+  margin-bottom: 3em;
+  width: 100%; }
+  @media (min-width: 400px) {
+    .about__quote {
+      float: right;
+      margin-right: 3%;
+      margin-left: 5%;
+      width: 50%; } }
+  .about__quote p.about__quoteText {
+    font-size: 1.3em; }
+  .about__quote footer {
+    margin-top: 2em;
+    font-size: 0.7em; }
 
 .form_content {
-  width: 100%; }
+  width: 100%;
+  display: flex;
+  font-size: 1em; }
+  .form_content select {
+    margin-bottom: 1em;
+    margin-right: 1em;
+    border-radius: 5px; }
+  .form_content input {
+    margin-bottom: 1em;
+    margin-right: 1em;
+    border-radius: 5px; }
+  .form_content legend {
+    margin-bottom: 1em; }
   .form_content fieldset {
-    border: 0 none; }
+    border: 0 none;
+    margin-bottom: 1em; }
