--- a/styles.scss
+++ b/styles.scss
@@ -36,11 +36,10 @@ img {
 .main_content{
 
   width:100%;
-  margin-top:$margin_for_one_hundred;
+  margin-top:$margin_for_eighty;
   margin-bottom:$margin_for_eighty;
 }
 
-@import "scss/Grid";
 @import "scss/button";
 @import "scss/headder";
 @import "scss/navigation";
