--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,26 @@ img {
     margin-top: 2em;
     font-size: 0.7em; }
 
+.FrontPage__checkBox {
+  display: flex; }
+
+.FrontPage__checkIcon {
+  width: 1.8em; }
+
+.FrontPage__checkField {
+  margin-top: 5em;
+  margin-bottom: 5em;
+  display: flex; }
+
+.FrontPage__checkImageBox {
+  width: 50%; }
+
+.FrontPage__checkFieldText {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; }
+
 .form_content {
   width: 100%; }
   .form_content__person {
@@ -233,7 +253,7 @@ img {
     width: 20%; }
   .form_content input {
     margin-bottom: 1em;
-    margin-right: 1em;
+    margin-right: 0.5em;
     border-radius: 4px;
     font-size: 1.5em; }
   .form_content legend {
@@ -243,7 +263,7 @@ img {
     border: 0 none;
     margin-bottom: 1em; }
 
-.op {
+.center_button_for_conent {
   width: 100%;
   display: flex;
   justify-content: center; }
