--- a/scss/indexContent.scss
+++ b/scss/indexContent.scss
@@ -1,24 +1,70 @@
 .FrontPage {
-
+  margin-bottom: 5em;
   &__checkBox {
     display: flex;
   }
   &__checkIcon {
     width: 1.8em;
   }
+  &__checkBoxBigText {
+    margin-top: 0;
+  }
   &__checkField{
     margin-top: 5em;
     margin-bottom: 5em;
     display: flex;
+    @media (max-width: 600px) {
+      flex-direction: column;
+    }
   }
   &__checkImageBox {
     width: 50%;
+    @media (max-width: 600px) {
+      align-content: center;
+      width: 95%;
+      margin: 0 auto;
+    }
   }
   &__checkFieldText {
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    @media (max-width: 600px) {
+      width: 95%;
+      margin: 0 auto;
+
+
+      justify-content: space-around;
+      height: 20em;
+
+    }
+  }
+  &__usersBox {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__userProfile {
+    width: 32.2%;
+  }
+  &__userProfile:nth-child(3){
+    margin: 0em;
+  }
+  &__userImage img {
+    border-radius: 50%;
+  }
+  &__userInfo {
+    height: 7em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+  }
+  &__userQuote {
+    font-style: italic;
+  }
+  &__userDetail {
+
   }
 
 }
