--- a/scss/indexContent.scss
+++ b/scss/indexContent.scss
@@ -50,8 +50,14 @@
   &__userProfile:nth-child(3){
     margin: 0em;
   }
+  &__userImage {
+
+  }
   &__userImage img {
+    width: 80%;
     border-radius: 50%;
+    display:block;
+    margin:auto;
   }
   &__userInfo {
     height: 7em;
