--- a/scss/indexContent.scss
+++ b/scss/indexContent.scss
@@ -27,6 +27,8 @@
     }
   }
   &__checkFieldText {
+    padding-left: 1em;
+    padding-right: 1em;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -36,13 +38,15 @@
       margin: 0 auto;
       justify-content: space-around;
       height: 20em;
+      margin-bottom: 2em;
 
     }
   }
   &__usersBox {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: center;
+
   }
   &__userProfile {
     width: 32.2%;
