--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,24 +1,26 @@
 .footer {
   width: 102%;
-  margin-left:-10px;
-  background-color: #333;
+  margin-left: -0.625em;
   color: $font-color-nav;
+  background-color: #333;
 
   &__info {
     display: flex;
     padding-top: 1em;
     padding-bottom: 2.5em;
     border-bottom: 2px solid #999;
-	justify-content: space-around; 
+    justify-content: space-around;
+
   }
 
   &__copywrite {
     padding-top: 2em;
     padding-bottom: 1em;
 
-	&__content {
-      text-align: center;
+    &__content {
       color: #7a8186;
+      text-align: center;
     }
+
   }
 }
