--- a/scss/headder.scss
+++ b/scss/headder.scss
@@ -1,48 +1,46 @@
 .headder {
-  width:102%;
-  margin-left:-10px;
-  //for Kaupa and About Headder
+  width: 102%;
+  margin-left: -0.625em;
+
   &__content {
     width: 100%;
-    height: 31.250em;
-    background: transparent url(img/bg-subpage.jpg) no-repeat;
+    height: 31.25em;
+    background: transparent url("img/bg-subpage.jpg") no-repeat;
     background-size: cover;
 
     &__title {
-      color: $font-color-nav;
-      font-size: $h3_font_size;
       padding-top: 7em;
       padding-left: 0.3em;
+      font-size: $h3_font_size;
+      color: $font-color-nav;
     }
   }
   //for Index Headder
   &__extra_index {
+    display: flex;
     width: 100%;
     height: 100vh;
-    background: transparent url(img/bg.jpg) no-repeat;
+    background: transparent url("img/bg.jpg") no-repeat;
     background-size: cover;
-	display:flex;
-	
+
     &__content {
       margin: auto;
-	  &__display_1{
-	    font-size:$h1_font_size;
-		text-align: center;
-	  }
-	  &__display_2{
-	    font-family: 'Roboto Slab', serif;
-	    font-size:$h4_font_size;
-		margin-bottom:1em;
-	  }
-	  &__display_3{
-	    width: 4em;
-		margin-left:3em;
-	  }
-	}
+
+      &__display_1 {
+        font-size: $h1_font_size;
+        text-align: center;
+      }
+
+      &__display_2 {
+        margin-bottom: 1em;
+        font-family: "Roboto Slab", serif;
+        font-size: $h4_font_size;
+      }
+
+      &__display_3 {
+        width: 4em;
+        margin-left: 3em;
+      }
+    }
   }
 }
-
-  
-
- 
- 
