--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,4 @@
 @charset "UTF-8";
-/**----------------------------------------------------------------------------------
-Til að byrja með við ætlum að reyna að hafa allar breytur i þessu skjali 
-E.I stærð skjárs,stærð texta, útlit texta , margin. Ástæðan fyrir þetta er að það getur 
-komið oft fyrir að margir aðilar  að vinna i mismunandi pörtum á siðu (lika aðrar siður) 
-þá gera þeir sinar eigin stærið en svo er hægt að lenda i þetta mun ekki lita eins á 
-öllum siðum E.I 3 mismunandi margin reglur, texta stærðir .... 
-Notar breytur úr þessu skjali og ef það er ekki til þá bæta hana við i þetta skjal
------------------------------------------------------------------------------------**/
 /*Þetta skjal bara i raun inniheldur allar grunnstillingar á öllum siðum*/
 /*Tryggjum að öll tög eru með Border-box  og fjarlægjum margin og padding*/
 *, *:before, *:after {
@@ -44,18 +36,18 @@ img {
 .button {
   width: 6em;
   padding: 0.3125em;
-  border: 1px solid #666;
-  border-radius: 0.25em;
-  color: #eee;
-  background-color: #666;
-  white-space: nowrap;
-  text-overflow: ellipsis;
   overflow: hidden;
-  cursor: pointer;
-  font-family: 'Open Sans', sans-serif;
-  text-decoration: none;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.96em;
+  color: #eee;
   text-align: center;
-  font-size: 1.96em; }
+  text-decoration: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  cursor: pointer;
+  background-color: #666;
+  border: 1px solid #666;
+  border-radius: 0.25em; }
   .button:hover {
     background-color: #333;
     transition: background-color 500ms ease; }
@@ -67,61 +59,66 @@ img {
     border: 1px solid #333; }
 
 .panta_extra_button {
-  font-size: 1em;
-  width: 20%; }
+  width: 20%;
+  font-size: 1em; }
+
+.center_button_for_conent {
+  display: flex;
+  width: 100%;
+  justify-content: center; }
 
 .headder {
   width: 102%;
-  margin-left: -10px; }
+  margin-left: -0.625em; }
   .headder__content {
     width: 100%;
-    height: 31.250em;
-    background: transparent url(img/bg-subpage.jpg) no-repeat;
+    height: 31.25em;
+    background: transparent url("img/bg-subpage.jpg") no-repeat;
     background-size: cover; }
     .headder__content__title {
-      color: #FFFFFF;
-      font-size: 2.25em;
       padding-top: 7em;
-      padding-left: 0.3em; }
+      padding-left: 0.3em;
+      font-size: 2.25em;
+      color: #fff; }
   .headder__extra_index {
+    display: flex;
     width: 100%;
     height: 100vh;
-    background: transparent url(img/bg.jpg) no-repeat;
-    background-size: cover;
-    display: flex; }
+    background: transparent url("img/bg.jpg") no-repeat;
+    background-size: cover; }
     .headder__extra_index__content {
       margin: auto; }
       .headder__extra_index__content__display_1 {
         font-size: 1.5em;
         text-align: center; }
       .headder__extra_index__content__display_2 {
-        font-family: 'Roboto Slab', serif;
-        font-size: 3.125em;
-        margin-bottom: 1em; }
+        margin-bottom: 1em;
+        font-family: "Roboto Slab", serif;
+        font-size: 3.125em; }
       .headder__extra_index__content__display_3 {
         width: 4em;
         margin-left: 3em; }
 
 .navigation {
-  width: 102%;
-  margin-left: -10px;
-  margin-bottom: -50px;
+  position: sticky;
+  top: 0;
   z-index: 1;
+  display: flex;
+  width: 102%;
+  margin-bottom: -3.125em;
+  margin-left: -0.625em;
+  color: #fff;
   background-color: #333;
   border: 1px solid #333;
   opacity: 0.9;
-  position: sticky;
-  top: 0;
-  color: #FFFFFF;
-  display: flex;
   justify-content: space-between; }
   .navigation__title {
     padding: 10px;
-    font-size: 1.5em;
-    font-family: 'Roboto Slab', serif; }
+    font-family: "Roboto Slab", serif;
+    font-size: 1.5em; }
   .navigation__buttons {
-    margin-right: 0.250em;
-    padding: 9px; }
+    padding: 9px;
+    margin-right: 0.25em; }
 
 @-webkit-keyframes fadeIn {
   from {
@@ -167,9 +164,9 @@ img {
 
 .footer {
   width: 102%;
-  margin-left: -10px;
-  background-color: #333;
-  color: #FFFFFF; }
+  margin-left: -0.625em;
+  color: #fff;
+  background-color: #333; }
   .footer__info {
     display: flex;
     padding-top: 1em;
@@ -180,14 +177,14 @@ img {
     padding-top: 2em;
     padding-bottom: 1em; }
     .footer__copywrite__content {
-      text-align: center;
-      color: #7a8186; }
+      color: #7a8186;
+      text-align: center; }
 
 .about__title {
   margin-top: 5em;
-  font-family: 'Roboto Slab', sans-serif;
-  font-weight: 700;
-  font-size: 1.5em; }
+  font-family: "Roboto Slab", sans-serif;
+  font-size: 1.5em;
+  font-weight: 700; }
 
 .about__about_wrapper {
   display: flex; }
@@ -196,20 +193,21 @@ img {
   margin-top: 1em; }
 
 .about__quote {
-  font-size: 1.3em;
-  font-style: italic;
+  width: 100%;
   margin-top: 3em;
   margin-bottom: 3em;
-  width: 100%; }
+  font-size: 1.3em;
+  font-style: italic; }
   @media (min-width: 400px) {
     .about__quote {
       float: right;
+      width: 50%;
       margin-right: 3%;
-      margin-left: 5%;
-      width: 50%; } }
-  .about__quote p.about__quoteText {
+      margin-left: 5%; } }
+  .about__quote .about__quoteText {
     font-size: 1.3em; }
   .about__quote footer {
+    /* stylelint-disable-line */
     margin-top: 2em;
     font-size: 0.7em; }
 
@@ -246,27 +244,22 @@ img {
     font-size: 1em; }
   .form_content .offset {
     margin-left: 10px; }
-  .form_content select {
-    margin-bottom: 1em;
-    margin-right: 1em;
-    border-radius: 4px;
-    width: 20%; }
   .form_content input {
     margin-bottom: 1em;
     margin-right: 0.5em;
     border-radius: 4px;
     font-size: 1.5em; }
+  .form_content select {
+    margin-bottom: 1em;
+    margin-right: 1em;
+    border-radius: 4px;
+    width: 20%; }
   .form_content legend {
     font-size: 1.5em;
     margin-bottom: 1em; }
   .form_content fieldset {
     border: 0 none;
     margin-bottom: 1em; }
-
-.center_button_for_conent {
-  width: 100%;
-  display: flex;
-  justify-content: center; }
 
 @media (min-width: 400px) {
   .form_content {
@@ -276,5 +269,9 @@ img {
 @media (max-width: 400px) {
   .form_content {
     margin-left: 20px; }
+    .form_content .person_extra_left {
+      margin-left: -0.625em; }
+  .panta_extra_button {
+    width: 60%; }
   .form_content__person {
     width: 90%; } }
