--- a/styles.css
+++ b/styles.css
@@ -211,25 +211,73 @@ img {
     margin-top: 2em;
     font-size: 0.7em; }
 
-.FrontPage__checkBox {
-  display: flex; }
-
-.FrontPage__checkIcon {
-  width: 1.8em; }
-
-.FrontPage__checkField {
-  margin-top: 5em;
-  margin-bottom: 5em;
-  display: flex; }
-
-.FrontPage__checkImageBox {
-  width: 50%; }
-
-.FrontPage__checkFieldText {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around; }
+.FrontPage {
+  margin-bottom: 5em; }
+  .FrontPage__checkBox {
+    display: flex; }
+  .FrontPage__checkIcon {
+    width: 1.8em; }
+  .FrontPage__checkBoxBigText {
+    margin-top: 0;
+    display: flex; }
+  .FrontPage__checkField {
+    margin-top: 5em;
+    margin-bottom: 5em;
+    display: flex; }
+    @media (max-width: 600px) {
+      .FrontPage__checkField {
+        flex-direction: column; } }
+  .FrontPage__checkImageBox {
+    width: 50%; }
+    @media (max-width: 600px) {
+      .FrontPage__checkImageBox {
+        align-content: center;
+        width: 95%;
+        margin: 0 auto; } }
+  .FrontPage__checkFieldText {
+    padding-left: 1em;
+    padding-right: 1em;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; }
+    @media (max-width: 600px) {
+      .FrontPage__checkFieldText {
+        width: 95%;
+        margin: 0 auto;
+        justify-content: space-around;
+        height: 20em;
+        margin-bottom: 2em; } }
+  .FrontPage__usersBox {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; }
+  .FrontPage__userProfile {
+    width: 32.2%;
+    margin-bottom: 2em; }
+    @media (max-width: 600px) {
+      .FrontPage__userProfile {
+        width: 50%; } }
+    @media (max-width: 400px) {
+      .FrontPage__userProfile {
+        width: 100%; } }
+  .FrontPage__userProfile:nth-child(3) {
+    margin: 0em; }
+  .FrontPage__userImage img {
+    width: 80%;
+    border-radius: 50%;
+    display: block;
+    margin: auto; }
+  .FrontPage__userInfo {
+    height: 7em;
+    display: flex;
+    flex-direction: column;
+    text-align: center; }
+    @media (min-width: 600px) {
+      .FrontPage__userInfo {
+        justify-content: space-between; } }
+  .FrontPage__userQuote {
+    font-style: italic; }
 
 .form_content {
   width: 100%; }
