lagaði allar lint villur i Variables/Footer/Headder/AboutContent/Navigator/button og validataði html i kaupa og Um

--- a/scss/aboutContent.scss
+++ b/scss/aboutContent.scss
@@ -1,4 +1,7 @@
 .about {
+  padding-right: 1em;
+  padding-left: 1em;
+
   &__title {
     margin-top: 5em;
     font-family: "Roboto Slab", sans-serif;
