--- a/styles.css
+++ b/styles.css
@@ -180,36 +180,36 @@ img {
       color: #7a8186;
       text-align: center; }
 
-.about__title {
-  margin-top: 5em;
-  font-family: "Roboto Slab", sans-serif;
-  font-size: 1.5em;
-  font-weight: 700; }
-
-.about__about_wrapper {
-  display: flex; }
-
-.about__text {
-  margin-top: 1em; }
-
-.about__quote {
-  width: 100%;
-  margin-top: 3em;
-  margin-bottom: 3em;
-  font-size: 1.3em;
-  font-style: italic; }
-  @media (min-width: 400px) {
-    .about__quote {
-      float: right;
-      width: 50%;
-      margin-right: 3%;
-      margin-left: 5%; } }
-  .about__quote .about__quoteText {
-    font-size: 1.3em; }
-  .about__quote footer {
-    /* stylelint-disable-line */
-    margin-top: 2em;
-    font-size: 0.7em; }
+.about {
+  padding-right: 1em;
+  padding-left: 1em; }
+  .about__title {
+    margin-top: 5em;
+    font-family: "Roboto Slab", sans-serif;
+    font-size: 1.5em;
+    font-weight: 700; }
+  .about__about_wrapper {
+    display: flex; }
+  .about__text {
+    margin-top: 1em; }
+  .about__quote {
+    width: 100%;
+    margin-top: 3em;
+    margin-bottom: 3em;
+    font-size: 1.3em;
+    font-style: italic; }
+    @media (min-width: 400px) {
+      .about__quote {
+        float: right;
+        width: 50%;
+        margin-right: 3%;
+        margin-left: 5%; } }
+    .about__quote .about__quoteText {
+      font-size: 1.3em; }
+    .about__quote footer {
+      /* stylelint-disable-line */
+      margin-top: 2em;
+      font-size: 0.7em; }
 
 .FrontPage {
   margin-bottom: 5em; }
@@ -286,28 +286,32 @@ img {
   .form_content .person_extra_right {
     margin-left: -0.313em; }
   .form_content .person_extra_left {
-    padding-left: 0.500em; }
+    padding-left: 0.5em; }
   .form_content .resizeinput {
     width: 100%;
     font-size: 1em; }
   .form_content .offset {
-    margin-left: 10px; }
+    margin-left: 0.625em; }
   .form_content input {
-    margin-bottom: 1em;
+    /* stylelint-disable-line */
     margin-right: 0.5em;
-    border-radius: 4px;
-    font-size: 1.5em; }
-  .form_content select {
     margin-bottom: 1em;
-    margin-right: 1em;
-    border-radius: 4px;
-    width: 20%; }
-  .form_content legend {
     font-size: 1.5em;
-    margin-bottom: 1em; }
+    border-radius: 0.25em; }
+  .form_content select {
+    /* stylelint-disable-line */
+    width: 20%;
+    margin-right: 1em;
+    margin-bottom: 1em;
+    border-radius: 0.25em; }
+  .form_content legend {
+    /* stylelint-disable-line */
+    margin-bottom: 1em;
+    font-size: 1.5em; }
   .form_content fieldset {
-    border: 0 none;
-    margin-bottom: 1em; }
+    /* stylelint-disable-line */
+    margin-bottom: 1em;
+    border: 0 none; }
 
 @media (min-width: 400px) {
   .form_content {
@@ -316,7 +320,7 @@ img {
 
 @media (max-width: 400px) {
   .form_content {
-    margin-left: 20px; }
+    margin-left: 1.25em; }
     .form_content .person_extra_left {
       margin-left: -0.625em; }
   .panta_extra_button {
