--- a/scss/animations.scss
+++ b/scss/animations.scss
@@ -1,37 +1,57 @@
 //Byrjum on endir á öllum hlutum i.e byrja ósynilegt og verður sýnilegt
-@-webkit-keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-@-moz-keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-@keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
- 
+@-webkit-keyframes fadeIn {
+
+  from { opacity: 0; }
+
+  to { opacity: 1; }
+
+}
+
+@-moz-keyframes fadeIn {
+
+  from { opacity: 0; }
+
+  to { opacity: 1; }
+
+}
+
+@keyframes fadeIn {
+
+  from { opacity: 0; }
+
+  to { opacity: 1; }
+
+}
+
 .animation {
- opacity: 0; 
- -webkit-animation:fadeIn ease-in 1;
- -moz-animation:fadeIn ease-in 1;
- animation:fadeIn ease-in 1;
- 
- -webkit-animation-fill-mode:forwards;  
- -moz-animation-fill-mode:forwards;
- animation-fill-mode:forwards;
- 
- -webkit-animation-duration:1s;
- -moz-animation-duration:1s;
- animation-duration:1s;
- 
+  opacity: 0;
+  -webkit-animation:fadeIn ease-in 1;/* stylelint-disable-line */
+  -moz-animation:fadeIn ease-in 1;/* stylelint-disable-line */
+  animation:fadeIn ease-in 1;/* stylelint-disable-line */
+
+  -webkit-animation-fill-mode:forwards;/* stylelint-disable-line */
+  -moz-animation-fill-mode:forwards;/* stylelint-disable-line */
+  animation-fill-mode: forwards;
+
+  -webkit-animation-duration:1s;/* stylelint-disable-line */
+  -moz-animation-duration:1s;/* stylelint-disable-line */
+  animation-duration: 1s;
+
   &__one {
-    -webkit-animation-delay: 0.7s;
-    -moz-animation-delay: 0.7s;
+    -webkit-animation-delay: 0.7s;/* stylelint-disable-line */
+    -moz-animation-delay: 0.7s;/* stylelint-disable-line */
     animation-delay: 0.7s;
   }
- 
+
   &__two {
-    -webkit-animation-delay: 1.5s;
-    -moz-animation-delay:1.5s;
+    -webkit-animation-delay: 1.5s;/* stylelint-disable-line */
+    -moz-animation-delay:1.5s;/* stylelint-disable-line */
     animation-delay: 1.5s;
   }
- 
+
   &__three {
-    -webkit-animation-delay: 2.3s;
-    -moz-animation-delay: 2.3s;
+    -webkit-animation-delay: 2.3s;/* stylelint-disable-line */
+    -moz-animation-delay: 2.3s;/* stylelint-disable-line */
     animation-delay: 2.3s;
   }
 }
