--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,6 +1,5 @@
 .footer {
-  width: 102%;
-  margin-left: -0.625em;
+  width: 100%;
   color: $font-color-nav;
   background-color: #333;
 
@@ -9,8 +8,7 @@
     padding-top: 1em;
     padding-bottom: 2.5em;
     border-bottom: 2px solid #999;
-    justify-content: space-around;
-
+    justify-content: space-evenly;
   }
 
   &__copywrite {
