--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,10 @@ img {
   margin-top: 5em;
   margin-bottom: 5em; }
 
+.margnifier {
+  width: 102% !important;
+  margin-left: -0.625em; }
+
 .button {
   width: 6em;
   padding: 0.3125em;
@@ -73,8 +77,7 @@ img {
   justify-content: center; }
 
 .headder {
-  width: 102%;
-  margin-left: -0.625em; }
+  width: 100%; }
   .headder__content {
     width: 100%;
     height: 31.25em;
@@ -109,9 +112,8 @@ img {
   top: 0;
   z-index: 1;
   display: flex;
-  width: 102%;
+  width: 100%;
   margin-bottom: -3.125em;
-  margin-left: -0.625em;
   color: #fff;
   background-color: #333;
   border: 1px solid #333;
@@ -181,8 +183,7 @@ img {
     animation-delay: 2.3s; }
 
 .footer {
-  width: 102%;
-  margin-left: -0.625em;
+  width: 100%;
   color: #fff;
   background-color: #333; }
   .footer__info {
@@ -190,7 +191,7 @@ img {
     padding-top: 1em;
     padding-bottom: 2.5em;
     border-bottom: 2px solid #999;
-    justify-content: space-around; }
+    justify-content: space-evenly; }
   .footer__copywrite {
     padding-top: 2em;
     padding-bottom: 1em; }
