--- a/scss/indexContent.scss
+++ b/scss/indexContent.scss
@@ -3,19 +3,35 @@
   &__checkBox {
     display: flex;
   }
-  &__checkIcon {
-    width: 1.8em;
+  &__checkIcon img{
+    width: 1.5em;
   }
+
+  &__checkIcon {
+    padding-top: 0.2em;
+    width: 24px;
+  }
+  &__checkText {
+    margin-left: 0.5em;
+  }
+
   &__checkBoxBigText {
     margin-top: 0;
+    font-size: 1.4em;
     display: flex;
+    font-family: "Roboto Slab", sans-serif;
+    font-weight: bold;
   }
   &__checkField{
     margin-top: 5em;
     margin-bottom: 5em;
+    margin-right: 0.2em;
+    margin-left: 0.2em;
     display: flex;
     @media (max-width: 600px) {
       flex-direction: column;
+      margin-right: 0em;
+      margin-left: 0em;
     }
   }
   &__checkImageBox {
@@ -27,8 +43,6 @@
     }
   }
   &__checkFieldText {
-    padding-left: 1em;
-    padding-right: 1em;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -46,12 +60,15 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
+    margin-top: 12em;
+    @media (max-width: 800px) {
+      margin-bottom: 5em;
+    }
   }
   &__userProfile {
-    width: 32.2%;
-    margin-bottom: 2em;
-    @media (max-width: 600px) {
+    width: 33%;
+    margin-bottom: 6em;
+    @media (max-width: 800px) {
       width: 50%;
     }
     @media (max-width: 400px) {
@@ -69,8 +86,12 @@
     border-radius: 50%;
     display:block;
     margin:auto;
+    @media (max-width: 800px + 1) {
+      width: 90%;
+    }
   }
   &__userInfo {
+    padding-top: 3em;
     height: 7em;
     display: flex;
     flex-direction: column;
@@ -81,9 +102,30 @@
   }
   &__userQuote {
     font-style: italic;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    @media (min-width: 600px) {
+      padding-left: 1.5em;
+      padding-right: 1.5em;
+    }
   }
   &__userDetail {
-
+    margin-top: 2.5em;
   }
 
+}
+
+.indexlowerbutton {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3em;
+  font-size:1.3em;
+  &__text {
+	margin-bottom:1em;
+  }
+
+  &__button {
+	margin-left:30px;
+  }
 }
