--- a/scss/headder.scss
+++ b/scss/headder.scss
@@ -4,7 +4,7 @@
   &__content {
     width: 100%;
     height: 31.25em;
-    background: transparent url("img/bg-subpage.jpg") no-repeat;
+    background: transparent url("img/bg-subpage.jpg") no-repeat fixed 50% 50%;
     background-size: cover;
 
     &__title {
@@ -19,7 +19,7 @@
     display: flex;
     width: 100%;
     height: 100vh;
-    background: transparent url("img/bg.jpg") no-repeat;
+    background: transparent url("img/bg.jpg") no-repeat fixed 50% 50%;
     background-size: cover;
 
     &__content {
