--- a/scss/aboutContent.scss
+++ b/scss/aboutContent.scss
@@ -24,7 +24,7 @@
     font-size: 1.3em;
     font-style: italic;
 
-    @media (min-width: $phone-max-width) {
+    @media (min-width: $phone-max-width + 1) {
       float: right;
       width: 50%;
       margin-right: 3%;
